--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <div class="landing">                        <!-- page one -->
   <span>Mind Game</span>
-  <audio class="mayo"  src="./Y2Mate.is - مدحت شلبى يانهار ابيض مسخرة هدف محمد صلاح-P1eIFwgnnrQ-144p-1643780941959 (1).mp4"></audio>
-  <audio class="medhat"  src="./Y2Mate.is - مدحت شلبي  برافو عليك-FjpGJaOlxZ0-144p-1643780364836 (1) (1).mp4"></audio>
-    <img src="./brain.ico" alt="">
-  <audio  class="game" src="./6125.mp3"  loop type="audio/mpeg"  ></audio>
+  <audio class="mayo"  src="./media/Y2Mate.is - مدحت شلبى يانهار ابيض مسخرة هدف محمد صلاح-P1eIFwgnnrQ-144p-1643780941959 (1).mp4"></audio>
+  <audio class="medhat"  src="./media/Y2Mate.is - مدحت شلبي  برافو عليك-FjpGJaOlxZ0-144p-1643780364836 (1) (1).mp4"></audio>
+    <img src="./media/brain.ico" alt="">
+  <audio  class="game" src="./media/6125.mp3"  loop type="audio/mpeg"  ></audio>
   <input class="name" type="text" placeholder="Enter your Name ">
   <input class="age" type="number" placeholder="Enter Your Age">
   <select name="" id="">
