--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
   <div class="header">
     <span class="info"> Hi </span>
-    <span class="timer"> Timer 3:00</span>
+    <div class="timer">
+  <span> <strong>Timer </strong><span></span></span>
+</div>
     <span class="score">score  :  0 </span>
   </div>
 <div class="moon">
